[gd_scene load_steps=6 format=3 uid="uid://mwqwo87rjr8w"]

[ext_resource type="Script" path="res://enemies/foguetinho/script/foguetinho.gd" id="1_hahrk"]
[ext_resource type="Texture2D" uid="uid://h03dunp627wf" path="res://enemies/foguetinho/foguetinho.png" id="1_wl6g5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vf5o8"]
radius = 39.0
height = 224.0

[sub_resource type="Animation" id="Animation_t1fko"]
resource_name = "destroy"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nx5mj"]
_data = {
"destroy": SubResource("Animation_t1fko")
}

[node name="foguetinho" type="Area2D"]
script = ExtResource("1_hahrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vf5o8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_wl6g5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.5, -3.99998)
scale = Vector2(9.35, 16.6)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 144)
rotation = 1.5708

[node name="TimerShoot" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nx5mj")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_timer_shoot_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
